# labs-sem-5

AIPOS/Lab1/: .coverage  .gitignore  Dockerfile  Makefile  pyproject.toml
AIPOS/Lab1/src/: __main__.py  config.py  main.py
AIPOS/Lab1/tests/: conftest.py
AIPOS/Lab2/: .gitignore  Makefile  pyproject.toml
AIPOS/Lab2/docker/: docker-entrypoint.sh
AIPOS/Lab2/infra/: k8s.tf  outputs.tf  provider.tf  variables.tf
AIPOS/Lab2/src/: __main__.py  alembic.ini  config.py  database.py  errors.py  exceptions.py  main.py  pagination.py  service.py
AIPOS/Lab2/tests/: test_get_file.py  test_options_file.py
DB/Lab1/: ddl.sql  ddl_1.sql  ddl_2.sql  dml.sql  dml_2.sql
DB/Lab2/: 1.bpmn  2.bpmn  3.bpmn  4.bpmn  5.bpmn  DDL.sql  DML.sql  UC.drawio  er.drawio
DB/Lab3/: query.cyp  schema.cyp
LOIS/Lab1/: README.md  go.mod  main.js  package-lock.json  package.json
LOIS/Lab1/cmd/: main.go
LOIS/Lab1/data/: 1  2  3  4
LOIS/Lab1/internal/: operations.go
LOIS/Lab1/src/: data_loader.js  data_validators.js  operations.js
LOIS/Lab2/: main.js  package.json
OMIS/Lab1/: Class Diagram.drawio  SOLID.drawio  State_Diagrams.drawio  Suquence.drawio  UI.fig  Untitled.drawio  Use-case.drawio  diagram.bpmn  re.drawio
OMIS/ PZ/: OMIS(PZ).bpmn
SIMZIS/Lab1/: Makefile  pyproject.toml  visualize.ipynb
SIMZIS/Lab1/src/: __main__.py  contants.py  main.py  utils.py
SIMZIS/Lab2/: pyproject.toml
SIMZIS/Lab5/: main.py
STATOIV/Lab1/: tmp.csv
STATOIV/Lab2/: main.ipynb
STATOIV/Lab3/: main.ipynb
STATOIV/Lab4/: main.ipynb
STATOIV/Lab5/: main.ipynb  temp
STATOIV/Lab6/: main.ipynb
(+59 files in other folders)
